<resources>
    <string name="app_name">Mark Pollution</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="user_name">User Name</string>
    <string name="user_mail">user@mail.com</string>
    <string name="action_logout">Log out</string>
    <string name="newsfeed">NewsFeed</string>
    <string name="maps">Maps Fragment</string>
    <string name="seriousreport">Serious report</string>
    <string name="reportmanagement">Report management</string>
    <string name="rencentlyreport">Rencently report</string>
    <string name="nearbyreport">Nearby report</string>
    <string name="allreport">All report</string>
    <string name="get_location_this">Get location this</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="service_not_available">Service not available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="set_your_location">Set your Location</string>
    <string name="address">Address</string>
    <string name="click_to_change_location">Click to change location</string>
    <string name="submit">Submit</string>
    <string name="category">Category</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter title</string>
    <string name="imageview">ImageView</string>
    <!--<string name="server_client_id">62807479997-90fkub1s4okl2gqqu2bfg6hpu2hck3sm.apps.googleusercontent.com</string>-->
</resources>
